--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testimonials grid section</title>
 
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" />
+
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -87,6 +90,12 @@
 
         </div>
     </main>
+
+    <footer class="main-footer">
+        <div class="container">
+            Challenge by <a href="#">Frontend Mentor</a>. Coded by <a href="#">Ahmed Osama Bedawy</a>
+        </div>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
