--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            Challenge by <a href="#">Frontend Mentor</a>. Coded by <a href="#">Ahmed Osama Bedawy</a>
+            Challenge by <a href="https://www.frontendmentor.io/profile/ahmeddoosama">Frontend Mentor</a>. Coded by <a href="https://www.linkedin.com/in/ahmeddoosama/">Ahmed Osama Bedawy</a>
         </div>
     </footer>
 
