--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Testimonials grid section</title>
 
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" />
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -28,72 +29,108 @@
     <main>
         <div class="container">
 
-            <article class="card">
-                <div class="card__header">
-                    <img class="person__pic" src="images/persons/image-daniel.jpg" alt="Daniel Clifford" />
-                    <h4 class="person__name">Daniel Clifford</h4>
-                    <h5>Verified Graduate</h5>
-                </div>
-                <div class="card__body">
-                    <p class="card__intro">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</p>
-                    <p class="card__review">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
-                </div>
-            </article>
+            <div class="cards-groub">
+                <article class="card grid-card-1">
+                    <div class="card__header">
+                        <img class="person__pic" src="images/persons/image-daniel.jpg" alt="Daniel Clifford" />
+                        <div>
+                            <h4 class="person__name">Daniel Clifford</h4>
+                            <h5>Verified Graduate</h5>
+                        </div>
+                    </div>
+                    <div class="card__body">
+                        <p class="card__intro">I received a job offer mid-course, and the subjects I learned were
+                            current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.
+                        </p>
+                        <p class="card__review">“ I was an EMT for many years before I joined the bootcamp. I’ve been
+                            looking to make a transition and have heard some people who had an amazing experience here.
+                            I signed up for the free intro course and found it incredibly fun! I enrolled shortly
+                            thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since
+                            completing the course, I’ve successfully switched careers, working as a Software Engineer at
+                            a VR startup. ”</p>
+                    </div>
+                </article>
 
-            <article class="card">
-                <div class="card__header">
-                    <img class="person__pic" src="images/persons/image-jonathan.jpg" alt="Jonathan Walters" />
-                    <h4 class="person__name">Jonathan Walters</h4>
-                    <h5>Verified Graduate</h5>
-                </div>
-                <div class="card__body">
-                    <p class="card__intro">The team was very supportive and kept me motivated</p>
-                    <p class="card__review"> “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
-                </div>
-            </article>
+                <article class="card grid-card-2">
+                    <div class="card__header">
+                        <img class="person__pic" src="images/persons/image-jonathan.jpg" alt="Jonathan Walters" />
+                        <div>
+                            <h4 class="person__name">Jonathan Walters</h4>
+                            <h5>Verified Graduate</h5>
+                        </div>
+                    </div>
+                    <div class="card__body">
+                        <p class="card__intro">The team was very supportive and kept me motivated</p>
+                        <p class="card__review"> “ I started as a total newbie with virtually no coding skills. I now
+                            work as a mobile engineer for a big company. This was one of the best investments I’ve made
+                            in myself. ”</p>
+                    </div>
+                </article>
 
-            <article class="card">
-                <div class="card__header">
-                    <img class="person__pic" src="images/persons/image-jeanette.jpg" alt="Jeanette Harmon" />
-                    <h4 class="person__name">Jeanette Harmon</h4>
-                    <h5>Verified Graduate</h5>
-                </div>
-                <div class="card__body">
-                    <p class="card__intro">An overall wonderful and rewarding experience</p>
-                    <p class="card__review">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
-                </div>
-            </article>
+                <article class="card grid-card-3">
+                    <div class="card__header">
+                        <img class="person__pic" src="images/persons/image-jeanette.jpg" alt="Jeanette Harmon" />
+                        <div>
+                            <h4 class="person__name">Jeanette Harmon</h4>
+                            <h5>Verified Graduate</h5>
+                        </div>
+                    </div>
+                    <div class="card__body">
+                        <p class="card__intro">An overall wonderful and rewarding experience</p>
+                        <p class="card__review">“ Thank you for the wonderful experience! I now have a job I really
+                            enjoy, and make a good living while doing something I love. ”</p>
+                    </div>
+                </article>
 
-            <article class="card">
-                <div class="card__header">
-                    <img class="person__pic" src="images/persons/image-patrick.jpg" alt="Patrick Abrams" />
-                    <h4 class="person__name">Patrick Abrams</h4>
-                    <h5>Verified Graduate</h5>
-                </div>
-                <div class="card__body">
-                    <p class="card__intro">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</p>
-                    <p class="card__review"> “ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
-                </div>
-            </article>
+                <article class="card grid-card-4">
+                    <div class="card__header">
+                        <img class="person__pic" src="images/persons/image-patrick.jpg" alt="Patrick Abrams" />
+                        <div>
+                            <h4 class="person__name">Patrick Abrams</h4>
+                            <h5>Verified Graduate</h5>
+                        </div>
+                    </div>
+                    <div class="card__body">
+                        <p class="card__intro">Awesome teaching support from TAs who did the bootcamp themselves.
+                            Getting guidance from them and learning from their experiences was easy.</p>
+                        <p class="card__review"> “ The staff seem genuinely concerned about my progress which I find
+                            really refreshing. The program gave me the confidence necessary to be able to go out in the
+                            world and present myself as a capable junior developer. The standard is above the rest. You
+                            will get the personal attention you need from an incredible community of smart and amazing
+                            people. ”</p>
+                    </div>
+                </article>
 
-            <article class="card">
-                <div class="card__header">
-                    <img class="person__pic" src="images/persons/image-kira.jpg" alt="Kira Whittle" />
-                    <h4 class="person__name">Kira Whittle</h4>
-                    <h5>Verified Graduate</h5>
-                </div>
-                <div class="card__body">
-                    <p class="card__intro">Such a life-changing experience. Highly recommended!</p>
-                    <p class="card__review">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”</p>
-                </div>
-            </article>
+                <article class="card grid-card-5">
+                    <div class="card__header">
+                        <img class="person__pic" src="images/persons/image-kira.jpg" alt="Kira Whittle" />
+                        <div>
+                            <h4 class="person__name">Kira Whittle</h4>
+                            <h5>Verified Graduate</h5>
+                        </div>
+                    </div>
+                    <div class="card__body">
+                        <p class="card__intro">Such a life-changing experience. Highly recommended!</p>
+                        <p class="card__review">“ Before joining the bootcamp, I’ve never written a line of code. I
+                            needed some structure from professionals who can help me learn programming step by step. I
+                            was encouraged to enroll by a former student of theirs who can only say wonderful things
+                            about the program. The entire curriculum and staff did not disappoint. They were very
+                            hands-on and I never had to wait long for assistance. The agile team project, in particular,
+                            was outstanding. It took my learning to the next level in a way that no tutorial could ever
+                            have. In fact, I’ve often referred to it during interviews as an example of my developent
+                            experience. It certainly helped me land a job as a full-stack developer after receiving
+                            multiple offers. 100% recommend! ”</p>
+                    </div>
+                </article>
+            </div>
 
         </div>
     </main>
 
     <footer class="main-footer">
         <div class="container">
-            Challenge by <a href="https://www.frontendmentor.io/profile/ahmeddoosama">Frontend Mentor</a>. Coded by <a href="https://www.linkedin.com/in/ahmeddoosama/">Ahmed Osama Bedawy</a>
+            Challenge by <a href="https://www.frontendmentor.io/profile/ahmeddoosama">Frontend Mentor</a>. Coded by <a
+                href="https://www.linkedin.com/in/ahmeddoosama/">Ahmed Osama Bedawy</a>
         </div>
     </footer>
 
